--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libffi7/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libffi7/copyright-detailed.expected.yml
@@ -35,22 +35,26 @@ license_detections:
               CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
               TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
               SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-      - score: '100.0'
+      - score: '79.17'
         start_line: 62
-        end_line: 66
-        matched_length: 51
-        match_coverage: '100.0'
-        matcher: 2-aho
+        end_line: 70
+        matched_length: 57
+        match_coverage: '79.17'
+        matcher: 3-seq
         license_expression: gpl-2.0-plus
-        rule_identifier: gpl-2.0-plus_35.RULE
+        rule_identifier: gpl-2.0-plus_858.RULE
         rule_relevance: 100
-        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/gpl-2.0-plus_35.RULE
+        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/gpl-2.0-plus_858.RULE
         matched_text: |
           Permission is granted to copy, distribute and/or modify this document
               under the terms of the GNU General Public License as published by the
               Free Software Foundation; either version 2, or (at your option) any
               later version.  A copy of the license is included in the
               section entitled ``GNU General Public License''.
+
+          doc/*:
+            Permission is granted to copy, distribute and/or modify this document
+            under the terms of the GNU General Public License
       - score: '100.0'
         start_line: 69
         end_line: 76
@@ -81,7 +85,7 @@ license_detections:
         rule_relevance: 100
         rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/gpl-1.0-plus_478.RULE
         matched_text: and is licensed under the GPL, see `/usr/share/common-licenses/GPL'.
-    identifier: mit_and_gpl_2_0_plus_and_gpl_1_0_plus-8acf6657-b6d8-39e2-7fd2-50e1d036392f
+    identifier: mit_and_gpl_2_0_plus_and_gpl_1_0_plus-d975bf27-0617-3629-9279-63c39b163da7
 other_license_detections: []
 copyright: |
   Copyright (c) 1996-2011 Red Hat, Inc.
