--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libtasn1-6/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libtasn1-6/copyright-detailed.expected.yml
@@ -58,16 +58,16 @@ license_detections:
     identifier: lgpl_2_1_plus-9c41e5e7-72ec-2448-df2b-424137a5b9fc
   - license_expression: gpl-3.0-plus AND gfdl-1.3 AND gfdl-1.3-plus
     matches:
-      - score: '100.0'
+      - score: '85.91'
         start_line: 50
-        end_line: 66
+        end_line: 70
         matched_length: 128
-        match_coverage: '100.0'
-        matcher: 2-aho
+        match_coverage: '85.91'
+        matcher: 3-seq
         license_expression: gpl-3.0-plus
-        rule_identifier: gpl-3.0-plus_288.RULE
+        rule_identifier: gpl-3.0-plus_417.RULE
         rule_relevance: 100
-        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/gpl-3.0-plus_288.RULE
+        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/gpl-3.0-plus_417.RULE
         matched_text: |
           This program is free software: you can redistribute it and/or modify
            * it under the terms of the GNU General Public License as published by
@@ -86,6 +86,10 @@ license_detections:
 
           On Debian GNU/Linux systems, the complete text of the GNU General Public
           License version 3 can be found in /usr/share/common-licenses/GPL-3.
+
+
+          The documentation is distributed under the terms of the GNU Free
+          Documentation License (
       - score: '100.0'
         start_line: 69
         end_line: 70
@@ -120,7 +124,7 @@ license_detections:
 
           On Debian systems a copy of the complete text of the GNU FDL 1.3
           can be found in /usr/share/common-licenses/GFDL-1.3.
-    identifier: gpl_3_0_plus_and_gfdl_1_3_and_gfdl_1_3_plus-ca4df800-141f-5c15-72b1-19b8df01217e
+    identifier: gpl_3_0_plus_and_gfdl_1_3_and_gfdl_1_3_plus-20aaaa92-d02e-2c2d-0615-d69acc5b00d5
 other_license_detections: []
 copyright: |
   Copyright (c) 2000-2020 Free Software Foundation, Inc.
